Attached blog page to the blog link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul>
 
         <li class="content">
-          <a href="#">Blog</a>
+          <a href="/blog.html">Blog</a>
         </li>
 
         <li> <span>|</span> </li>
