--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li> <span>|</span> </li>
 
         <li class="content">
-          <a href="#">About</a>
+          <a href="/about.html">About</a>
         </li>
 
       </ul>
