added project 1 in project list also made project list to show total projects made

--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
-
-
-
-
 </head>
 
 <body>
@@ -35,13 +31,13 @@
       <ul>
 
         <li class="content">
-          <a href="/blog.html">Blog</a>
+          <a href="/blog.html" id="blog">Blog</a>
         </li>
 
         <li> <span>|</span> </li>
 
         <li class="content">
-          <a href="#">Project</a>
+          <a href="./project/projectList.html">Project</a>
         </li>
 
         <li> <span>|</span> </li>
