--- a/helpful-resources/index1.html
+++ b/helpful-resources/index1.html
@@ -12,6 +12,12 @@
         href="  https://www.digitalocean.com/community/tutorial_series/an-introduction-to-open-source"
         >Introduction to GitHub and Open-Source Projects</a
       >
+      <br />
+      <br />
+      <a
+        href="https://github.com/zenika-open-source/promote-open-source-project#readme"
+        >Open source promotion cheat sheet</a
+      >
     </p>
   </body>
 </html>
