--- a/helpful-resources/index1.html
+++ b/helpful-resources/index1.html
@@ -18,6 +18,12 @@
         href="https://github.com/zenika-open-source/promote-open-source-project#readme"
         >Open source promotion cheat sheet</a
       >
+      <br />
+      <br />
+      <a
+        href="https://medium.com/gitcoin"
+        >All About Grow OPEN-SOURCE</a
+      >
     </p>
   </body>
 </html>
