--- a/helpful-resources/index1.html
+++ b/helpful-resources/index1.html
@@ -24,6 +24,7 @@
         href="https://medium.com/gitcoin"
         >All About Grow OPEN-SOURCE</a
       >
+      CODING💖
     </p>
   </body>
 </html>
