--- a/helpful-resources/index2.html
+++ b/helpful-resources/index2.html
@@ -9,7 +9,10 @@
   <body>
     <p>
         <a href="https://www.geeksforgeeks.org/10-projects-that-every-developer-should-lay-their-hands-on/">Mini-Project Ideas</a>
-
+        <br /> 
+        <br /> 
+        <a href="https://github.com/florinpop17/app-ideas">App-Ideas</a>
+        
     </p>
   </body>
 </html>
