--- a/about.html
+++ b/about.html
@@ -4,35 +4,45 @@
 <head>
   <meta charset="utf-8">
   <title>PERSONAL SITE </title>
-<link rel="stylesheet" href="about.css">
-
+  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
+  <div class="per_img"><img src="https://i.pinimg.com/originals/29/47/9b/29479ba0435741580ca9f4a467be6207.png"
+      style="width: 200px;" alt="DON'T TOUCH IT'S POISONESS!! COINTAINS CYNIDE"></div>
 
-      <td><img src="https://i.pinimg.com/originals/29/47/9b/29479ba0435741580ca9f4a467be6207.png" style="width: 200px;" alt="DON'T TOUCH IT'S POISONESS!! COINTAINS CYNIDE"></td>
-      <td>
-        <h1>S.D's Work-flow</h1><em> <strong><a href="#"> LINKED IN PROFILE </a> </strong></em>
+  <div class="per_info">
+    <h1>S.D's Work-flow</h1>
+    <div class="icons"><a href="#"><i class="fa fa-linkedin"></i> </a>
+      <a href="#"><i class="fa fa-github-square"></i></a>
+      <a href="#"><i class="fa fa-twitter"></i></a>
+    </div>
+    <div class="intro">
+      <h2>ABC Institute Of Technology</h2>
+      <p>School Of Computer Science, Chennai, TAMIL NADU</p>
+      <p class="description">I ❤️️ data analytics and web development, want to go deep into the world of AI and ML. I am
+        a work ethic
+        professional of computer science. who has been consistently praised as good
+        communicator by my peers. I want to work for an organization which provides me the opportunity to improve my
+        skills and knowledge and enhance my professional skills in dynamic and fast paced workplace with a cutting
+        edge in new technology that can be used for growth along with the organization objectives.
+      </p>
+    </div>
 
-        <p><em><strong>ABC Institute Of Technology</strong>, School Of Computer Science, Chennai, TAMIL NADU </em></p>
-        <p><em>I ❤️️ data analytics and web development, want to go deep into the world of AI and ML. I am a work ethic professional of computer science. who has been consistently praised as good
-communicator by my peers. I want to work for an organization which provides me the opportunity to improve my skills and knowledge and enhance my professional skills in dynamic and fast paced workplace with a cutting edge in new technology that can be used for growth along with the organization objectives.
-</em></p>
-      </td>
-    </tr>
-  </table>
+  </div>
+  
   <hr>
+<div class="common">
   <h3>EDUCATION</h3>
-  <p>
   <ul>
     <li>ABC Institute OF TECHNOLOGY, CHENNAI <em>8.53 CGPA</em></li>
     <li>GURU NANAK PUBLIC SCHOOL, KOTA </li>
-    <li>ARMY PUBLIC SCHOOL, JAIPUR  </li>
+    <li>ARMY PUBLIC SCHOOL, JAIPUR </li>
   </ul>
-  </p>
-  <hr>
+</div>
+<hr>
+<div class="common">
   <h3>MY HOBBIES</h3>
   <ol>
     <li>PLAYING BASKETBALL</li>
@@ -42,7 +52,9 @@ communicator by my peers. I want to work for an organization which provides me t
     <li>WEB DEVELOPMENT</li>
     <li>BACKEND WEB DEVELOPMENT</li>
   </ol>
+</div>
   <hr>
+  <div class="common experience">
   <h3>WORK EXPERIENCE</h3>
   <table>
     <thead>
@@ -68,8 +80,11 @@ communicator by my peers. I want to work for an organization which provides me t
     </tbody>
 
   </table>
-<em> <strong>  <a class="GITHUB" href="https://github.com/YOGENDERSS"> GITHUB PROJECTS</a> </strong></em>
+
+  <h3><a class="GITHUB" href="https://github.com/YOGENDERSS"> GITHUB PROJECTS</a> </h3>
+</div>
   <hr>
+  <div class="common ">
   <h3>SKILLS</h3>
   <table cellspacing="10">
     <tr>
@@ -81,6 +96,7 @@ communicator by my peers. I want to work for an organization which provides me t
       <td> ⭐⭐⭐⭐ </td>
     </tr>
   </table>
+</div>
   <hr>
 </body>
 
