--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <ul>
 
         <li class="content">
-          <a href="/blog.html" id="blog">Blog</a>
+          <a href="./blog.html" id="blog">Blog</a>
         </li>
 
         <li> <span>|</span> </li>
@@ -56,7 +56,7 @@
         <li> <span>|</span> </li>
 
         <li class="content">
-          <a href="/about.html">About</a>
+          <a href="./about.html">About</a>
         </li>
 
       </ul>
